# multimodal-analytics-platform

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
project/: README.md
project/config/: .gitignore  Makefile  app.py  pyproject.toml  requirements.txt  setup.py
project/docs/: ADVANCEMENT_ROADMAP.md  API_REFERENCE.md  BROWSER_TROUBLESHOOTING.md  FILE_UPLOAD_FIX.md  INTERFACE_FIXED.md  MATHEMATICAL_CAPABILITIES.md  METADATA_UPLOAD_FEATURE.md  MULTIMODAL_TEST_RESULTS.md  SAMPLES_GUIDE.md  TESTING_GUIDE.md  TEST_RESULTS.md
project/docs/research/: ACADEMIC_OVERVIEW.md  ELITE_UNIVERSITY_BENCHMARK.md
project/docs/user-guide/: QUICK_START.md
project/samples/: README.md
project/samples/combined/: test_batch_1.json
project/samples/metadata/: advanced_metadata.json  audio_metadata.json  basic_metadata.json  multimodal_metadata.json  production_metadata.json
project/src/processors/: __init__.py  audio_processor.py  data_integrator.py  image_processor.py
project/src/static/: simple_test.html  test_upload.html
project/src/templates/: dashboard.html
project/src/utils/: __init__.py  graph_analyzer.py  math_analyzer.py
